--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -1,23 +1,25 @@
-﻿@{
+﻿@model LoginViewModel
+@{
     ViewData["Title"] = "Đăng nhập tài khoản cms";
 }
 
 <div class="text-center">
     <h1 class="display-4">Đăng nhập tài khoản cms</h1>
 
-    <form>
+    <form method="post" asp-asp-controller="Account" asp-action="Login">
+		@Html.AntiForgeryToken();
         <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <input type="email" asp-for = "Email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
             <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
         </div>
         <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1">
+            <input type="password" asp-for = "Password" class="form-control" id="exampleInputPassword1">
         </div>
         <div class="mb-3 form-check">
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+            <label class="form-check-label" asp-for="Rememberme" for="exampleCheck1">Check me out</label>
         </div>
         <button type="submit" class="btn btn-primary">Login</button>
     </form>
