--- a/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <script type="importmap"></script>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" />
     <link rel="stylesheet" href="~/StockManageMVC.styles.css" asp-append-version="true" />
 </head>
 <body>
@@ -33,6 +34,15 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-primary" asp-area="Admin" asp-controller="Dashboard" asp-action="Index">CMS</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-info" asp-area="Admin" asp-controller="Product" asp-action="Index"><i class="fas fa-box"></i>Products</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-info" asp-area="Admin" asp-controller="Warehouse" asp-action="Import"><i class="fa-solid fa-warehouse"></i>Nhập kho</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-info" asp-area="Admin" asp-controller="Warehouse" asp-action="Export"><i class="fa-solid fa-warehouse"></i>Xuất kho</a>
                             </li>
                         }
                         else
