--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -7,7 +7,8 @@
     <h1 class="display-4">Đăng ký tài khoản cms</h1>
 
     <form method="post" asp-controller = "Account" asp-action="Register">
-        @Html.AntiForgeryToken();
+        @Html.AntiForgeryToken()
+        <div asp-validation-summary="All" class="text-danger"></div>
         <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Email address</label>
             <input type="email" asp-for = "Email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
