--- a/Areas/Admin/Views/Product/Edit.cshtml
+++ b/Areas/Admin/Views/Product/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ProductModel
 @{
-    ViewData["Title"] = "Create Product";
+    ViewData["Title"] = "Edit Product";
 }
 
 <div class="text-center">
