--- a/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -47,6 +47,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-info" asp-area="Admin" asp-controller="Supplier" asp-action="Index"><i class="fa-solid fa-warehouse"></i>Nhà cung cấp</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-info" asp-area="Admin" asp-controller="User" asp-action="Index"><i class="fa-solid fa-user"></i>User</a>
+                            </li>
                         }
                         else
                         {
