--- a/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Areas/Admin/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using StockManageMVC.Models.ViewModel
 @using X.PagedList.Mvc.Core
 @using X.PagedList
+@using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
